// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Турбо-оверлей Модуль создания html (ClassicView) Cоздает корректную шапку 1`] = `
<div
  class="turbo-overlay__head turbo-overlay__head_visible"
>
  <button
    class="turbo-overlay__back-button turbo-overlay__button"
  >
    <div
      class="turbo-overlay__back-icon"
    >
      backIcon.svg
    </div>
    <div
      class="turbo-overlay__back-label"
    >
      Назад
    </div>
  </button>
  <div
    class="turbo-overlay__head-central-container"
  >
    <div
      class="turbo-overlay__title"
    />
    <ul
      class="turbo-overlay__dots"
    />
  </div>
  <button
    class="turbo-overlay__close-button turbo-overlay__button"
  >
    <div
      class="turbo-overlay__close-icon"
    >
      closeIcon.svg
    </div>
  </button>
</div>
`;

exports[`Турбо-оверлей Модуль создания html (ClassicView) Меняет режим singlepage-multipage 1`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay_multipage"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button turbo-overlay__back-button_hidden"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots turbo-overlay__dots_visible"
          >
            <li
              class="turbo-overlay__dot"
            />
            <li
              class="turbo-overlay__dot"
            />
            <li
              class="turbo-overlay__dot"
            />
            <li
              class="turbo-overlay__dot"
            />
            <li
              class="turbo-overlay__dot turbo-overlay__dot_active"
            />
          </ul>
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner"
      />
      <div
        class="turbo-overlay__frames-container"
      />
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Модуль создания html (ClassicView) Меняет режим singlepage-multipage 2`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          >
            <li
              class="turbo-overlay__dot"
            />
            <li
              class="turbo-overlay__dot"
            />
            <li
              class="turbo-overlay__dot"
            />
            <li
              class="turbo-overlay__dot"
            />
            <li
              class="turbo-overlay__dot turbo-overlay__dot_active"
            />
          </ul>
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner"
      />
      <div
        class="turbo-overlay__frames-container"
      />
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Модуль создания html (ClassicView) Показывает и прячет крестик 1`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner"
      />
      <div
        class="turbo-overlay__frames-container"
      />
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Модуль создания html (ClassicView) Показывает и прячет крестик 2`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button turbo-overlay__close-button_visible"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner"
      />
      <div
        class="turbo-overlay__frames-container"
      />
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Модуль создания html (ClassicView) Показывает и прячет крестик 3`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner"
      />
      <div
        class="turbo-overlay__frames-container"
      />
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Модуль создания html (ClassicView) Показывает и прячет оверлей 1`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner"
      />
      <div
        class="turbo-overlay__frames-container"
      />
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Модуль создания html (ClassicView) Показывает и прячет спиннер 1`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner"
      />
      <div
        class="turbo-overlay__frames-container"
      />
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Модуль создания html (ClassicView) Показывает и прячет шапку 1`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner"
      />
      <div
        class="turbo-overlay__frames-container"
      />
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Модуль создания html (ClassicView) Сдвигает контейнер с фреймами 1`] = `
<div
  class="turbo-overlay__frames-container"
/>
`;

exports[`Турбо-оверлей Модуль создания html (ClassicView) Сдвигает контейнер с фреймами 2`] = `
<div
  class="turbo-overlay__frames-container"
  style="transform: translate3d(10%, 0, 0);"
/>
`;

exports[`Турбо-оверлей Модуль создания html (ClassicView) Сдвигает контейнер с фреймами 3`] = `
<div
  class="turbo-overlay__frames-container"
  style="transform: translate3d(-200%, 0, 0);"
/>
`;

exports[`Турбо-оверлей Модуль создания html (ClassicView) Создает корректный html при иницилизации 1`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner"
      />
      <div
        class="turbo-overlay__frames-container"
      />
    </div>
  </body>
</html>
`;
